--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "Cafe_House",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon --inspect ./src/index.js"
   },
   "repository": {
     "type": "git",
