--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.2",
     "mongoose": "^5.12.14",
     "nodemon": "^2.0.7",
+    "pagination": "^0.4.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
