--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-validator": "^6.12.0",
     "koa-handlebars": "^1.0.0",
     "mongoose": "^5.12.14",
+    "node": "^16.6.1",
     "nodemon": "^2.0.7",
     "pagination": "^0.4.6",
     "passport": "^0.4.1",
